add types declaration

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "fod4se",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A playful text normalization library that cleans up profanity, decodes obfuscated words, and gives you full control over how the text is displayed in the end.",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "build": "tsc"
